# Advent-Of-Code-2024

./: .gitignore  CHANGELOG.md  README.md  aoc2024hs.cabal  day
Day-1/: Main  Main.hi  Main.hs
Day-2/: Main  Main.hs
Day1/: Main.hs
Day2/: Main  Main.hs
src/: AoC.hs
src/Y2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
