cabal-version:      3.0
name:               aoc2024hs
version:            0.1.0.0
synopsis:           Advent of Code Solutions
-- description:
license:            MIT
license-file:       LICENSE
author:             Lqnk4
maintainer:         internalbeast109@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common config
    ghc-options: -Wall
    build-depends:    
        base ^>=4.17.2.1

library
    import: config
    hs-source-dirs: src
    exposed-modules:
        AoC
        Y2024.Day01
        Y2024.Day02
        Y2024.Day03
        Y2024.Day04
        Y2024.Day05
        Y2024.Day06
        Y2024.Day07
        Y2024.Day08
    build-depends:
        regex-tdfa ^>= 1.3.2,
        containers ^>= 0.7,
        parallel ^>= 3.2.2.0
    default-extensions: TupleSections


executable aoc2024hs
    import:           config
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/Lqnk4/Advent-Of-Code-2024.git
